--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1 class="title-text">Welcome to Todo list page</h1>
-<app-todo-list></app-todo-list>
+<div class="d-flex flex-column mb-3 justify-content-between align-items-center">
+  <div class="d-flex align-items-center">
+    <h1 class="title-text" routerLink="/">Welcome to Todo list page</h1>
+    <app-test></app-test>
+  </div>
 
+  <router-outlet></router-outlet>
+</div>
