--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,10 +1,6 @@
 <div style="width: 700px; margin-top: 80px">
-  <div *ngFor="let todo of todos">
-    {{ todo.description }}
-  </div>
 
   <div class="mb-3">
-    <label for="todoDescription" class="form-label">Choose Language</label>
     <textarea
       class="form-control"
       id="todoDescription"
@@ -14,25 +10,35 @@
     ></textarea>
     </div>
 
-  <div class="mb-3">
-    <button  class="btn btn btn-primary">Translate</button>
+  <div class="mb-3" style="text-align: center;">
+    <button  class="btn btn-outline-primary"
+    (click)="translate(todo.id)"
+    >Translate</button>
     <button
-    
+    style="margin-left: 15px;"
       class="btn btn-secondary"
        (click)="addTodoItem(todo)"
     >
       Add
     </button>
-    <button type="button" class="btn btn-outline-dark btn-tertiary" (click)="cancelAdd()" >
-      Cancel
+    <button  style="margin-left: 15px;" type="button" class="btn btn-light" (click)="cancelAdd()" >
+      Reset
     </button>
   </div>
-  <div class="mb-3">
-    <label for="todoDescription" class="form-label">Choose Langua</label>
+  <div class="mb-3"><div class="d-flex" style="align-items: center;justify-content: center;margin-bottom: 10px;">
+
+    <label for="todoDescription" class="form-label">Choose Language</label>    
+    <select name="location" id="location" [(ngModel)]="language.code" (ngModelChange)="setChange()"
+     class="form-control" style="width: 150px;margin-left: 20px;"  >
+
+      <option value="{{language}}" *ngFor="let language of languages" [value]="language.code">{{language.language}}</option>
+    </select>
+  </div>
     <textarea
       class="form-control"
       id="todoDescription"
       rows="3"
+      [value]="todoTranslated"
     ></textarea
     >
   </div>
