--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,16 @@
 <div class="d-flex flex-column mb-3 justify-content-between align-items-center">
-  <div class="d-flex align-items-center">
+  <div
+    class="d-flex align-items-center justify-content-between"
+    style="
+      width: 100vw;
+      height: 100px;
+      border-bottom: 1px;
+      border-bottom-style: solid;
+      border-block-color: lightgray;
+      padding-left: 200px;
+      padding-right: 200px;
+    "
+  >
     <h1 class="title-text" routerLink="/">Welcome to Todo list page</h1>
     <app-test></app-test>
   </div>
