--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -1,22 +1,23 @@
 <form [formGroup]="signinForm"
- style="width: 700px; margin-top: 80px" 
+ style="width: 400px; margin-top: 80px" 
  (ngSubmit)="signIn(this.signinForm.value)" [(ngModel)]="user"
  >
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
+  <div class="form-group mb-3">
+    <label for="exampleInputEmail1" class="form-label">Name or Email</label>
     <input
-    [class.is-invalid] = "signinForm.get('nameOrEmail').invalid && signinForm.get('nameOrEmail').touched "
+    [class.is-invalid] = "signinForm.get('name').invalid && signinForm.get('name').touched "
       type="email"
       class="form-control"
       id="exampleInputEmail1"
       aria-describedby="emailHelp"
       placeholder="Enter email"
-      formControlName="nameOrEmail"
+      formControlName="name"
+      required
     />
-    <p *ngIf="this.errors.field === 'nameOrEmail'">{{ errors.message }}</p>
+    <p *ngIf="this.errors.field === 'nameOrEmail'" style="color: red;">{{ errors.message }}</p>
   </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
+  <div class="form-group mb-3">
+    <label for="exampleInputPassword1" class="form-label">Password</label>
     <input
     [class.is-invalid] = "signinForm.get('password').invalid && signinForm.get('password').touched "
       type="password"
@@ -24,9 +25,10 @@
       id="exampleInputPassword1"
       placeholder="Password"
       formControlName="password"
+      required
     />
-    <p *ngIf="this.errors.field === 'password'">{{ errors.message }}</p>
+    <p *ngIf="this.errors.field === 'password'" style="color: red;">{{ errors.message }}</p>
   </div>
 
-  <button type="submit" class="btn btn-primary">Sign In</button>
+  <button type="submit" class="btn btn-primary" style="width: 100%;">Sign In</button>
 </form>
