--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -8,6 +8,8 @@
       [value]="todo.description"
       (change)="todo.description = getValue($event)"
     ></textarea>
+    <p *ngIf="this.errors.field === 'userid'" style="color: red;">{{ errors.message }}</p>
+    <p *ngIf="this.errors.field === 'description'" style="color: red;">{{ errors.message }}</p>
     </div>
 
   <div class="mb-3" style="text-align: center;">
