--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,47 +1,36 @@
-<div style="width: 700px; margin-top: 80px">
+<div style="width: 700px; margin-top: 80px" *ngIf="!userStatus?.isadmin">
 
   <div class="mb-3">
-    <textarea
-      class="form-control"
-      id="todoDescription"
-      rows="3"
-      [value]="todo.description"
-      (change)="todo.description = getValue($event)"
-    ></textarea>
+    <textarea class="form-control" id="todoDescription" rows="3" [value]="todo.description"
+      (change)="todo.description = getValue($event)"></textarea>
     <p *ngIf="this.errors.field === 'userid'" style="color: red;">{{ errors.message }}</p>
     <p *ngIf="this.errors.field === 'description'" style="color: red;">{{ errors.message }}</p>
-    </div>
+  </div>
 
   <div class="mb-3" style="text-align: center;">
-    <button  class="btn btn-outline-primary"
-    (click)="translate(todo.id)"
-    >Translate</button>
-    <button
-    style="margin-left: 15px;"
-      class="btn btn-secondary"
-       (click)="addTodoItem(todo)"
-    >
+    <button class="btn btn-outline-primary" (click)="translate(todo.id)">Translate</button>
+    <button style="margin-left: 15px;" class="btn btn-secondary" (click)="addTodoItem(todo)">
       Add
     </button>
-    <button  style="margin-left: 15px;" type="button" class="btn btn-light" (click)="cancelAdd()" >
+    <button style="margin-left: 15px;" type="button" class="btn btn-light" (click)="cancelAdd()">
       Reset
     </button>
   </div>
-  <div class="mb-3"><div class="d-flex" style="align-items: center;justify-content: center;margin-bottom: 10px;">
+  <div class="mb-3">
+    <div class="d-flex" style="align-items: center;justify-content: center;margin-bottom: 10px;">
 
-    <label for="todoDescription" class="form-label">Choose Language</label>    
-    <select name="location" id="location" [(ngModel)]="language.code" (ngModelChange)="setChange()"
-     class="form-control" style="width: 150px;margin-left: 20px;"  >
+      <label for="todoDescription" class="form-label">Choose Language</label>
+      <select name="location" id="location" [(ngModel)]="language.code" (ngModelChange)="setChange()"
+        class="form-control" style="width: 150px;margin-left: 20px;">
 
-      <option value="{{language}}" *ngFor="let language of languages" [value]="language.code">{{language.language}}</option>
-    </select>
+        <option value="{{language}}" *ngFor="let language of languages" [value]="language.code">{{language.language}}
+        </option>
+      </select>
+    </div>
+    <textarea class="form-control" id="todoDescription" rows="3" [value]="todoTranslated"></textarea>
   </div>
-    <textarea
-      class="form-control"
-      id="todoDescription"
-      rows="3"
-      [value]="todoTranslated"
-    ></textarea
-    >
-  </div>
+</div>
+<div class="userrecord" *ngIf="userStatus?.isadmin">
+  <button routerLink="/users-history">check</button> <p > records?</p>
+  
 </div>
