--- a/src/app/records/records.component.html
+++ b/src/app/records/records.component.html
@@ -17,15 +17,10 @@
           <td>{{ user.name }}</td>
           <td>{{ user.email }}</td>
           <td>
-            <button
-              class="btn btn-primary"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#collapseExample"
-              aria-expanded="false"
-              aria-controls="collapseExample"
-              (click)="getTodoList(user.id)"
-            >
+            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+              aria-expanded="false" aria-controls="collapseExample" 
+              [routerLink]="['./']" [queryParams]="user.id"
+              (click)="getTodoList(user.id)">
               Check Records
             </button>
           </td>
@@ -33,17 +28,14 @@
       </tbody>
     </table>
   </div>
-  <div
-    class="collapse"
-    id="collapseExample"
-    style="width:500px;"
-  >
+  <div class="collapse" id="collapseExample" style="width:500px;">
     <table class="table" *ngIf="show" style="margin-left: 10px">
       <thead>
         <tr>
           <th scope="col">#</th>
           <th scope="col">todo item</th>
           <th scope="col">translated</th>
+          <th scope="col"></th>
         </tr>
       </thead>
       <tbody>
@@ -53,9 +45,11 @@
           <th>
             <input type="checkbox" [checked]="item.iscompleted" disabled />
           </th>
+          <th>
+            <button type="button" class="btn btn-outline-warning" (click)="deleteTodo(item.id)">x</button>
+          </th>
         </tr>
       </tbody>
     </table>
   </div>
 </div>
-
