--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -6,5 +6,5 @@
 </div>
 <div class="loginname" *ngIf="userStatus">
   <span class="name"> {{ userStatus.name[0].toLocaleUpperCase() }}</span>
-  <button type="button" class="btn btn-outline-primary" style="margin-left: 10px; height: 38px;" (click)="logOut()">logOut</button>
+  <button id="'logout" type="button" class="btn btn-outline-primary" style="margin-left: 10px; height: 38px;" (click)="logOut()">logOut</button>
 </div>
