--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -12,7 +12,7 @@
     <button style="margin-left: 15px;" class="btn btn-secondary" (click)="addTodoItem(todo)">
       Add
     </button>
-    <button style="margin-left: 15px;" type="button" class="btn btn-light" (click)="cancelAdd()">
+    <button id="resetbtn" style="margin-left: 15px;" type="button" class="btn btn-light" (click)="cancelAdd()">
       Reset
     </button>
   </div>
