--- a/src/app/records/records.component.html
+++ b/src/app/records/records.component.html
@@ -17,9 +17,8 @@
           <td>{{ user.name }}</td>
           <td>{{ user.email }}</td>
           <td>
-            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+            <button id="gettodo" class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
               aria-expanded="false" aria-controls="collapseExample" 
-              [routerLink]="['./']" [queryParams]="user.id"
               (click)="getTodoList(user.id)">
               Check Records
             </button>
