feat: separate todolist to single component; add toast

--- a/src/app/records/records.component.html
+++ b/src/app/records/records.component.html
@@ -1,7 +1,7 @@
-<p>records works!</p>
+<!-- <p>records works!</p> -->
 
-<div class="d-flex" style="width: 1000px; margin-top: 80px">
-  <div style="height: 400px" [ngStyle]="{ width: !show ? '100%' : '50%' }">
+<div class="d-flex" style="margin-top: 80px;width: 1000px;">
+  <div style="padding: 50px; height: 400px;width: 100%;"  >
     <table class="table">
       <thead>
         <tr>
@@ -16,10 +16,12 @@
           <th scope="row">{{ i + 1 }}</th>
           <td>{{ user.name }}</td>
           <td>{{ user.email }}</td>
-          <td>
-            <button id="gettodo" class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
-              aria-expanded="false" aria-controls="collapseExample" 
-              (click)="getTodoList(user.id)">
+          <td >
+            <button id="gettodo" class="btn btn-outline-primary"
+              [routerLink]="['use',user.id]"
+              [queryParams]="{id:user.id}"
+              (click)="widthChange()"
+              >
               Check Records
             </button>
           </td>
@@ -27,28 +29,9 @@
       </tbody>
     </table>
   </div>
-  <div class="collapse" id="collapseExample" style="width:500px;">
-    <table class="table" *ngIf="show" style="margin-left: 10px">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">todo item</th>
-          <th scope="col">translated</th>
-          <th scope="col"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let item of _todoList; index as i">
-          <th scope="row">{{ i + 1 }}</th>
-          <th>{{ item.description }}</th>
-          <th>
-            <input type="checkbox" [checked]="item.iscompleted" disabled />
-          </th>
-          <th>
-            <button type="button" class="btn btn-outline-warning" (click)="deleteTodo(item.id)">x</button>
-          </th>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+
+
+    <router-outlet></router-outlet>
+
+  
 </div>
