--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,5 @@
 
 /* Importing Bootstrap SCSS file. */
 @import 'node_modules/bootstrap/scss/bootstrap';
+
+@import "node_modules/ngx-toastr/toastr.css";
