--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,10 +1,10 @@
 <div *ngIf="!userStatus">
-  <button routerLink="/signIn" class="btn btn-primary" style="margin-left: 50px; margin: 24px">
+  <button id="signin" routerLink="/signIn" class="btn btn-primary" style="margin-left: 50px; margin: 24px">
     Signin
   </button>
-  <button routerLink="/signUp" class="btn btn-link">Sign Up</button>
+  <button id="signup" routerLink="/signUp" class="btn btn-link">Sign Up</button>
 </div>
 <div class="loginname" *ngIf="userStatus">
-  <span class="name"> {{ userStatus.name[0].toLocaleUpperCase() }}</span>
-  <button id="'logout" type="button" class="btn btn-outline-primary" style="margin-left: 10px; height: 38px;" (click)="logOut()">logOut</button>
+  <span id="avartart-name" class="name"> {{ userStatus.name[0].toLocaleUpperCase() }}</span>
+  <button id="logout" type="button" class="btn btn-outline-primary" style="margin-left: 10px; height: 38px;" (click)="logOut()">logOut</button>
 </div>
