--- a/src/app/todo-list/todo-list.component.scss
+++ b/src/app/todo-list/todo-list.component.scss
@@ -34,7 +34,7 @@ $text-color: #edfcff;
     background-color: deepskyblue;
     display: flex;
     height: 360px;
-    justify-content: end;
+    justify-content: flex-end;
     flex-direction: column;
 }
 
