--- a/src/app/todohistory/todohistory.component.html
+++ b/src/app/todohistory/todohistory.component.html
@@ -1,7 +1,7 @@
 <p>todohistory works!</p>
 <div  style="width:500px;">
     <button type="button" class="btn btn-outline-primary" routerLink="/users-history" >Back</button>
-    <table class="table" style="margin-left: 10px">
+    <table id="userhistory-container" class="table" style="margin-left: 10px">
       <thead>
         <tr>
           <th scope="col">#</th>
