--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="signupForm" style="width: 400px; margin-top: 80px" (ngSubmit)="signUp(this.signupForm.value)">
-  <div class="form-group mb-3" >
+  <div class="form-group mb-3"  id="username-container">
     <label class="form-label">name</label>
     <input
     [class.is-invalid] = "signupForm.get('name').invalid && signupForm.get('name').touched"
@@ -12,7 +12,7 @@
     <p *ngIf="this.errors.field==='name'" style="color: red;">{{errors.message}}</p>
   </div>
   
-  <div class="form-group mb-3">
+  <div class="form-group mb-3" id="email-container">
     <label for="exampleInputEmail1" class="form-label">Email address</label>
     <input
     [class.is-invalid] = "signupForm.get('email').invalid && signupForm.get('email').touched "
@@ -26,7 +26,7 @@
     />
     <p *ngIf="this.errors.field==='email'" style="color: red;">{{errors.message}}</p>
   </div>
-  <div class="form-group mb-3">
+  <div class="form-group mb-3" id="password-container">
     <label for="exampleInputPassword1" class="form-label">Password</label>
     <input
     [class.is-invalid] = "signupForm.get('password').invalid && signupForm.get('password').touched "
@@ -41,5 +41,5 @@
 
   </div>
 
-  <button type="submit" class="btn btn-outline-primary" style="width: 100%;">Sign Up</button>
+  <button id="signup-btn-container" type="submit" class="btn btn-outline-primary" style="width: 100%;">Sign Up</button>
 </form>
